--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-person">
+                <h3 class="team-subtitle subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -166,8 +168,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-person">
+                <h3 class="team-subtitle subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -176,8 +180,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-person">
+                <h3 class="team-subtitle subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -186,8 +192,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-person">
+                <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
