--- a/portfolio.html
+++ b/portfolio.html
@@ -73,20 +73,20 @@
             <li class="portfolio-buttons-item">
               <button class="portfolio-button button" type="button">All</button>
             </li>
-            <li class="portfolio-buttons-list">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button button" type="button">
                 Web Site
               </button>
             </li>
-            <li class="portfolio-buttons-list">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button button" type="button">App</button>
             </li>
-            <li class="portfolio-buttons-list">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button button" type="button">
                 Design
               </button>
             </li>
-            <li class="portfolio-buttons-list">
+            <li class="portfolio-buttons-item">
               <button class="portfolio-button button" type="button">
                 Marketing
               </button>
@@ -236,10 +236,10 @@
           >Web<span class="footer-logo-part">Studio</span></a
         >
         <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing &#38; growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing &#38; growth solutions.
+        </p>
       </div>
-      </p>
     </footer>
   </body>
 </html>
