--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <li class="header-nav-item">
               <a class="header-nav-link link" href="./index.html">Studio</a>
             </li>
-            <li class="header-nav-link">
+            <li class="header-nav-item">
               <a class="header-nav-link link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li class="header-nav-link">
+            <li class="header-nav-item">
               <a class="header-nav-link link" href="">Contacts</a>
             </li>
           </ul>
